syntax = "proto3";
option java_package = "com.dj.im.sdk.proto";
option java_outer_classname = "PrPushConversation";
import "prPushMessage.proto";
import "prUser.proto";
import "prGroup.proto";

// 推送会话情况
message PushConversationResponse {
    repeated Conversation conversations = 1;
}

// 一条会话的具体信息
message Conversation {
    // 会话key
    string conversationKey = 1;
    // 会话类型（0:单聊、1:群聊）
    int32 conversationType = 2;
    // 未读数量
    int32 unReadCount = 3;
    // 最后1条的消息
    repeated PushMessageResponse messages = 4;
    // 对方信息(单聊)
    UserResponse otherSideUserInfo = 5;
    // 群信息（群聊）
    GroupResponse groupInfo = 6;
}